# IrcBot

./: LICENSE  README.md
cmake/: FindSigC++.cmake
datas/: ai.xml  ircbot.ini
src/: CMakeLists.txt
src/bot/: CMakeLists.txt
src/bot/core/: CMakeLists.txt  main.cpp
src/bot/core/Bot/: bot.cpp  bot.h
src/bot/core/ModuleManager/: ModuleManagerC.cpp  ModuleManagerC.h  modulemanager.cpp  modulemanager.h
src/bot/modules/: CMakeLists.txt
src/bot/modules/AI/: AIAnswer.cpp  AIAnswer.h  AILanugageAnalyser.cpp  AILanugageAnalyser.h  CMakeLists.txt  ai.cpp  ai.h  main.cpp
src/bot/modules/InviteMe/: CMakeLists.txt  inviteme.cpp  inviteme.h  main.cpp
src/bot/modules/JoinChans/: CMakeLists.txt  joinchans.cpp  joinchans.h  main.cpp
src/bot/modules/ModManager/: CMakeLists.txt  main.cpp  modmanager.cpp  modmanager.h
src/libs/: CMakeLists.txt
src/libs/libbase/: CMakeLists.txt
src/libs/libbase/StringUtils/: StringUtils.cpp  StringUtils.h  StringUtils.inl
src/libs/libbotmodule/: CMakeLists.txt  cppmodule.cpp  cppmodule.h  module.h
src/libs/libbotmodule/cpp/: IrcModule.cpp  IrcModule.h  IrcModuleConnection.cpp  IrcModuleConnection.h  IrcModuleManager.cpp  IrcModuleManager.h
src/libs/libini/: CMakeLists.txt  Exceptions.h  INI.cpp  INI.h  INI.inl
src/libs/libirc/: CMakeLists.txt  irc.cpp  irc.h  ircconnection.cpp  ircconnection.h  irceventhandler.cpp  irceventhandler.h  ircstructs.h
src/libs/libirc2/: CMakeLists.txt  IRC.cpp  IRC.h  IRCChannel.h  IRCConnection.cpp  IRCConnection.h  IRCConnectionSendThread.cpp  IRCConnectionSendThread.h  IRCExceptions.h  IRCMessage.h
src/test/: CMakeLists.txt  main.cpp
